Fix ProfilePage responsive design
ProfilePage layout shifts when the page width is less
than the specified width, and  the flex wrap property might not trigger
due to profile names length.
 Change the css to use a grid layout to ensure consistent layout shift
regardless of profile names length on smaller screens.

--- a/src/pages/ProfilePage/ProfilePage.module.css
+++ b/src/pages/ProfilePage/ProfilePage.module.css
@@ -147,6 +147,11 @@
   font-weight: 300;
 }
 
+.profileButtons {
+  display: flex;
+  justify-content: right;
+}
+
 .followButton {
   font-size: var(--medium-little-font);
   padding: 0.25em 0.75em;
@@ -223,10 +228,12 @@
 
 @media screen and (max-width: 720px) {
   .topItem {
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: min-content 1fr;
   }
 
   .topItemChild {
+    grid-column: 1 / 3;
     padding: 0 1rem;
     order: 1;
   }
